test: update test file

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,7 +2,8 @@
   "review":{
     "error": {
       "cannot-transition-review-from-to": "Cannot transition Review from \"{ fromState }\" to \"{ toState }\"",
-      "cannot-create-review-store": "You are not allowed to create a review"
+      "cannot-create-review-store": "You are not allowed to create a review store",
+      "cannot-update-review-store":"You are not allowed to create a review store"
     }
   }
 }
